Add GA4 SPA tracking hook

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soshell Media</title>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C8VBSP84SY"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-C8VBSP84SY');
-    </script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C8VBSP84SY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){ dataLayer.push(arguments); }
+  gtag('js', new Date());
+  // IMPORTANT: prevent automatic page_view; we'll send page_view events from React
+  gtag('config', 'G-C8VBSP84SY', { 'send_page_view': false });
+</script>
 
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
