--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,7 @@
 
   <body class="body-bg">
     <div id="root">
-      <div style="display:none;">
+      <div style="position:absolute; width:1px; height:1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap;">
         <h1>Soshell Media</h1>
         <h2>Infinite Content. Auto-Booked Leads.</h2>
         <p>Scale your presence with an AI Twin. Fill your calendar with an AI Agent.</p>
