--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,6 +37,13 @@
     <link rel="preload" href="/assets/css/magnific-popup.css" as="style" onload="this.rel='stylesheet'">
     <link rel="preload" href="/assets/css/swiper-bundle.min.css" as="style" onload="this.rel='stylesheet'">
     <link rel="preload" href="/assets/css/nice-select.css" as="style" onload="this.rel='stylesheet'">
+    
+    <noscript>
+      <link rel="stylesheet" href="/assets/css/animate.css">
+      <link rel="stylesheet" href="/assets/css/magnific-popup.css">
+      <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
+      <link rel="stylesheet" href="/assets/css/nice-select.css">
+    </noscript>
   </head>
 
   <body class="body-bg">
